feat(n-queens): Add index file for running and printing out the gameboard.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "n queens code kata in JS",
   "main": "index.js",
   "scripts": {
-    "test": "jest"  
+    "test": "jest",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
